--- a/data-splitting/no-outliers/split_dataset_combined_outcome.ipynb
+++ b/data-splitting/no-outliers/split_dataset_combined_outcome.ipynb
@@ -1,14 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This Split Removes Outliers\n",
+    "- Does not partition on whether the patient ended up dying or not"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from IPython.display import display"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -129,7 +136,7 @@
     }
    ],
    "source": [
-    "notes = pd.read_csv('data/notes_with_interval.csv')\n",
+    "notes = pd.read_csv('../../data/notes_with_interval.csv')\n",
     "\n",
     "notes.head()"
    ]
@@ -270,221 +277,16 @@
     }
    ],
    "source": [
-    "dynamic = pd.read_csv('data/dynamic_cleaned.csv')\n",
+    "dynamic = pd.read_csv('../../data/dynamic_cleaned.csv')\n",
     "\n",
     "dynamic.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>hosp_admittime</th>\n",
-       "      <th>hosp_dischtime</th>\n",
-       "      <th>icu_intime</th>\n",
-       "      <th>icu_outtime</th>\n",
-       "      <th>los_icu</th>\n",
-       "      <th>icu_death</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>race</th>\n",
-       "      <th>admission_age</th>\n",
-       "      <th>...</th>\n",
-       "      <th>atrial_fibrillation</th>\n",
-       "      <th>malignant_cancer</th>\n",
-       "      <th>chf</th>\n",
-       "      <th>ckd</th>\n",
-       "      <th>cld</th>\n",
-       "      <th>copd</th>\n",
-       "      <th>diabetes</th>\n",
-       "      <th>hypertension</th>\n",
-       "      <th>ihd</th>\n",
-       "      <th>stroke</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>22987108</td>\n",
-       "      <td>6/10/46 16:37</td>\n",
-       "      <td>7/12/46 0:00</td>\n",
-       "      <td>6/22/46 11:46</td>\n",
-       "      <td>7/13/46 0:27</td>\n",
-       "      <td>20.53</td>\n",
-       "      <td>1</td>\n",
-       "      <td>M</td>\n",
-       "      <td>WHITE</td>\n",
-       "      <td>69.439961</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>103</th>\n",
-       "      <td>25154057</td>\n",
-       "      <td>9/19/03 12:29</td>\n",
-       "      <td>10/11/03 19:10</td>\n",
-       "      <td>9/20/03 18:27</td>\n",
-       "      <td>10/11/03 22:39</td>\n",
-       "      <td>21.17</td>\n",
-       "      <td>1</td>\n",
-       "      <td>M</td>\n",
-       "      <td>WHITE</td>\n",
-       "      <td>85.714119</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <td>21154874</td>\n",
-       "      <td>9/8/66 16:30</td>\n",
-       "      <td>9/24/66 2:25</td>\n",
-       "      <td>9/19/66 14:50</td>\n",
-       "      <td>9/24/66 5:12</td>\n",
-       "      <td>4.60</td>\n",
-       "      <td>1</td>\n",
-       "      <td>F</td>\n",
-       "      <td>WHITE</td>\n",
-       "      <td>82.686360</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>153</th>\n",
-       "      <td>20368705</td>\n",
-       "      <td>12/28/35 2:40</td>\n",
-       "      <td>1/11/36 6:00</td>\n",
-       "      <td>12/28/35 13:03</td>\n",
-       "      <td>1/11/36 6:04</td>\n",
-       "      <td>13.71</td>\n",
-       "      <td>1</td>\n",
-       "      <td>M</td>\n",
-       "      <td>WHITE</td>\n",
-       "      <td>75.988778</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>165</th>\n",
-       "      <td>20030660</td>\n",
-       "      <td>7/13/12 19:00</td>\n",
-       "      <td>7/23/12 18:00</td>\n",
-       "      <td>7/16/12 12:42</td>\n",
-       "      <td>7/23/12 20:26</td>\n",
-       "      <td>7.32</td>\n",
-       "      <td>1</td>\n",
-       "      <td>M</td>\n",
-       "      <td>WHITE</td>\n",
-       "      <td>78.532660</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 25 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           id hosp_admittime  hosp_dischtime      icu_intime     icu_outtime  \\\n",
-       "32   22987108  6/10/46 16:37    7/12/46 0:00   6/22/46 11:46    7/13/46 0:27   \n",
-       "103  25154057  9/19/03 12:29  10/11/03 19:10   9/20/03 18:27  10/11/03 22:39   \n",
-       "145  21154874   9/8/66 16:30    9/24/66 2:25   9/19/66 14:50    9/24/66 5:12   \n",
-       "153  20368705  12/28/35 2:40    1/11/36 6:00  12/28/35 13:03    1/11/36 6:04   \n",
-       "165  20030660  7/13/12 19:00   7/23/12 18:00   7/16/12 12:42   7/23/12 20:26   \n",
-       "\n",
-       "     los_icu  icu_death gender   race  admission_age  ...  \\\n",
-       "32     20.53          1      M  WHITE      69.439961  ...   \n",
-       "103    21.17          1      M  WHITE      85.714119  ...   \n",
-       "145     4.60          1      F  WHITE      82.686360  ...   \n",
-       "153    13.71          1      M  WHITE      75.988778  ...   \n",
-       "165     7.32          1      M  WHITE      78.532660  ...   \n",
-       "\n",
-       "     atrial_fibrillation  malignant_cancer chf ckd  cld  copd  diabetes  \\\n",
-       "32                     1                 0   0   1    0     0         0   \n",
-       "103                    1                 0   0   1    0     1         0   \n",
-       "145                    0                 0   1   0    0     0         0   \n",
-       "153                    1                 0   0   1    0     0         1   \n",
-       "165                    1                 0   0   0    0     0         0   \n",
-       "\n",
-       "     hypertension  ihd  stroke  \n",
-       "32              1    1       0  \n",
-       "103             1    1       1  \n",
-       "145             1    0       0  \n",
-       "153             1    1       0  \n",
-       "165             1    0       0  \n",
-       "\n",
-       "[5 rows x 25 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -627,27 +429,27 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>23559586</td>\n",
-       "      <td>8/4/37 0:07</td>\n",
-       "      <td>9/2/37 17:05</td>\n",
-       "      <td>8/10/37 19:54</td>\n",
-       "      <td>8/13/37 17:54</td>\n",
-       "      <td>2.92</td>\n",
-       "      <td>0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>BLACK/AFRICAN AMERICAN</td>\n",
-       "      <td>75.589414</td>\n",
+       "      <th>32</th>\n",
+       "      <td>22987108</td>\n",
+       "      <td>6/10/46 16:37</td>\n",
+       "      <td>7/12/46 0:00</td>\n",
+       "      <td>6/22/46 11:46</td>\n",
+       "      <td>7/13/46 0:27</td>\n",
+       "      <td>20.53</td>\n",
+       "      <td>1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>WHITE</td>\n",
+       "      <td>69.439961</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -661,44 +463,127 @@
        "22  25936663  1/11/45 23:02   1/22/45 16:06   1/12/45 15:10  1/13/45 18:50   \n",
        "25  25675339  11/2/83 21:12  11/19/83 15:36   11/6/83 20:59  11/10/83 0:44   \n",
        "30  27993048  11/19/67 8:23  12/25/67 14:53  11/26/67 16:26  12/5/67 16:53   \n",
-       "34  23559586    8/4/37 0:07    9/2/37 17:05   8/10/37 19:54  8/13/37 17:54   \n",
+       "32  22987108  6/10/46 16:37    7/12/46 0:00   6/22/46 11:46   7/13/46 0:27   \n",
        "\n",
        "    los_icu  icu_death gender                    race  admission_age  ...  \\\n",
        "11     3.05          0      M  BLACK/AFRICAN AMERICAN      55.139306  ...   \n",
        "22     1.15          0      M                   WHITE      65.032170  ...   \n",
        "25     3.16          0      M                   WHITE      61.837481  ...   \n",
        "30     9.02          0      F                   WHITE      56.881238  ...   \n",
-       "34     2.92          0      F  BLACK/AFRICAN AMERICAN      75.589414  ...   \n",
+       "32    20.53          1      M                   WHITE      69.439961  ...   \n",
        "\n",
        "    atrial_fibrillation  malignant_cancer chf ckd  cld  copd  diabetes  \\\n",
        "11                    0                 0   0   0    0     1         0   \n",
        "22                    0                 1   0   0    1     0         0   \n",
        "25                    0                 0   0   0    0     0         0   \n",
        "30                    0                 0   1   1    0     0         1   \n",
-       "34                    1                 1   0   1    0     0         0   \n",
+       "32                    1                 0   0   1    0     0         0   \n",
        "\n",
        "    hypertension  ihd  stroke  \n",
        "11             0    0       0  \n",
        "22             1    1       0  \n",
        "25             0    0       0  \n",
        "30             1    1       0  \n",
-       "34             1    0       0  \n",
+       "32             1    1       0  \n",
        "\n",
        "[5 rows x 25 columns]"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "static = pd.read_csv('data/static.csv')\n",
+    "static = pd.read_csv('../../data/static.csv')\n",
     "static = static[static['id'].isin(dynamic['id'])]\n",
-    "static_dead = static[static['icu_death'] == 1]\n",
-    "static_alive = static[static['icu_death'] == 0]\n",
+    "static.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saved\n"
+     ]
+    }
+   ],
+   "source": [
+    "static.to_csv('../../data/static_cleaned.csv', index=False)\n",
     "\n",
-    "display(static_dead.head())\n",
-    "display(static_alive.head())"
+    "print('saved')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3146, 25)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "static.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lower bound: -4.38\n",
+      "upper bound: 12.5\n",
+      "sample size: 3146\n"
+     ]
+    }
+   ],
+   "source": [
+    "Q1 = static['los_icu'].quantile(0.25)\n",
+    "Q3 = static['los_icu'].quantile(0.75)\n",
+    "IQR = Q3 - Q1\n",
+    "\n",
+    "lower_bound = Q1 - 1.5 * IQR\n",
+    "upper_bound = Q3 + 1.5 * IQR\n",
+    "\n",
+    "print(f'lower bound: {lower_bound}')\n",
+    "print(f'upper bound: {upper_bound}')\n",
+    "print(f'sample size: {len(static)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "filtered sample size: 2854\n"
+     ]
+    }
+   ],
+   "source": [
+    "static = static[(static['los_icu'] >= lower_bound) & (static['los_icu'] <= upper_bound)]\n",
+    "\n",
+    "print(f'filtered sample size: {len(static)}')"
    ]
   },
   {
@@ -715,8 +600,9 @@
     }
    ],
    "source": [
-    "static_dead.to_csv('data/static_cleaned_dead.csv', index=False)\n",
-    "static_alive.to_csv('data/static_cleaned_alive.csv', index=False)\n",
+    "static_train, static_test = train_test_split(static, test_size=0.10)\n",
+    "\n",
+    "static_test.to_csv('../../data/regression/no-outliers/combined/static_test.csv', index=False)\n",
     "\n",
     "print('saved')"
    ]
@@ -727,17 +613,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(499, 25)\n",
-      "(2647, 25)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(2568, 25)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(static_dead.shape)\n",
-    "print(static_alive.shape)"
+    "static_train.shape"
    ]
   },
   {
@@ -754,76 +641,11 @@
     }
    ],
    "source": [
-    "static_dead_train, static_dead_test = train_test_split(static_dead, test_size=0.10)\n",
-    "\n",
-    "static_dead_test.to_csv('data/regression/partitioned/static_dead_test.csv', index=False)\n",
-    "\n",
-    "print('saved')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saved\n"
-     ]
-    }
-   ],
-   "source": [
-    "static_alive_train, static_alive_test = train_test_split(static_alive, test_size=0.10)\n",
-    "\n",
-    "static_alive_test.to_csv('data/regression/partitioned/static_alive_test.csv', index=False)\n",
-    "\n",
-    "print('saved')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saved\n"
-     ]
-    }
-   ],
-   "source": [
-    "static_dead_train, static_dead_val = train_test_split(static_dead_train, test_size=0.10)\n",
+    "static_train, static_val = train_test_split(static_train, test_size=0.10)\n",
     "\n",
     "\n",
-    "static_dead_train.to_csv('data/regression/partitioned/static_dead_train.csv', index=False)\n",
-    "static_dead_val.to_csv('data/regression/partitioned/static_dead_val.csv', index=False)\n",
-    "\n",
-    "print('saved')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saved\n"
-     ]
-    }
-   ],
-   "source": [
-    "static_alive_train, static_alive_val = train_test_split(static_alive_train, test_size=0.10)\n",
-    "\n",
-    "\n",
-    "static_alive_train.to_csv('data/regression/partitioned/static_alive_train.csv', index=False)\n",
-    "static_alive_val.to_csv('data/regression/partitioned/static_alive_val.csv', index=False)\n",
+    "static_train.to_csv('../../data/regression/no-outliers/combined/static_train.csv', index=False)\n",
+    "static_val.to_csv('../../data/regression/no-outliers/combined/static_val.csv', index=False)\n",
     "\n",
     "print('saved')"
    ]
